Drastically improved Wicket functionality
git-svn-id: https://fortuity.svn.sourceforge.net/svnroot/fortuity/trunk@49 5bf6d0c5-e6fc-4c95-bb24-cc19bded424c

--- a/fortuity-wicket/src/test/java/com/fortuityframework/wicket/StatefulComponentPage.html
+++ b/fortuity-wicket/src/test/java/com/fortuityframework/wicket/StatefulComponentPage.html
@@ -9,6 +9,8 @@
 		<span wicket:id="feedback"></span>
 		
 		<a wicket:id="up">Up</a>
+		
+		<span wicket:id="receiver"></span>
 	</div>
 </body>
 </html>
